[package]
name = "tornado-opt-withdraw"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-groth16 = { version = "^0.5.0", default-features = false }
ark-bn254 = { version = "^0.5.0", default-features = false, features = ["curve"] }
ark-snark = { version = "^0.5.0", default-features = false }
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
digest = "0.9"
regex = "1.7.1"
hex = "0.4.3"
ark-relations = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
rand = "0.8.5"
blake2 = { version = "0.9", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", features = ["crh"] }